website/versioned_docs/version-2.0.0-alpha.12/node-client.mfacontainer.md
---
id: version-2.0.0-alpha.12-node-client.mfacontainer
title: MFAContainer class
hide_title: true
original_id: node-client.mfacontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## MFAContainer class


<b>Signature:</b>

```typescript
export declare class MFAContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./node-client.mfacontainer._constructor_.md) |  | Constructs a new instance of the <code>MFAContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [parent](./node-client.mfacontainer.parent.md) |  | <code>AuthContainer&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./node-client.mfacontainer.activateoob.md) |  |  |
|  [activateTOTP(otp)](./node-client.mfacontainer.activatetotp.md) |  |  |
|  [authenticateWithOOB(options)](./node-client.mfacontainer.authenticatewithoob.md) |  |  |
|  [authenticateWithRecoveryCode(code)](./node-client.mfacontainer.authenticatewithrecoverycode.md) |  |  |
|  [authenticateWithTOTP(options)](./node-client.mfacontainer.authenticatewithtotp.md) |  |  |
|  [createNewOOB(options)](./node-client.mfacontainer.createnewoob.md) |  |  |
|  [createNewTOTP(options)](./node-client.mfacontainer.createnewtotp.md) |  |  |
|  [deleteAuthenticator(id)](./node-client.mfacontainer.deleteauthenticator.md) |  |  |
|  [generateOTPAuthURIQRCodeImageURL(otpauthURI)](./node-client.mfacontainer.generateotpauthuriqrcodeimageurl.md) |  |  |
|  [getAuthenticators()](./node-client.mfacontainer.getauthenticators.md) |  |  |
|  [listRecoveryCode()](./node-client.mfacontainer.listrecoverycode.md) |  |  |
|  [regenerateRecoveryCode()](./node-client.mfacontainer.regeneraterecoverycode.md) |  |  |
|  [revokeAllTrustedDevices()](./node-client.mfacontainer.revokealltrusteddevices.md) |  |  |
|  [triggerOOB(authenticatorID)](./node-client.mfacontainer.triggeroob.md) |  |  |

