website/versioned_docs/version-2.0.0-alpha.18/node-client.mfacontainer.md
---
id: version-2.0.0-alpha.18-node-client.mfacontainer
title: MFAContainer class
hide_title: true
original_id: node-client.mfacontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## MFAContainer class

Skygear Auth Multi-Factor-Authentication APIs.

<b>Signature:</b>

```typescript
export declare class MFAContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./node-client.mfacontainer._constructor_.md) |  | Constructs a new instance of the <code>MFAContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [parent](./node-client.mfacontainer.parent.md) |  | <code>AuthContainer&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./node-client.mfacontainer.activateoob.md) |  | Activates out-of-band (OOB) MFA authenticator. |
|  [activateTOTP(otp)](./node-client.mfacontainer.activatetotp.md) |  | Activates time-based one time password (TOTP) MFA authenticator. |
|  [authenticateWithOOB(options)](./node-client.mfacontainer.authenticatewithoob.md) |  | Performs MFA using out-of-band (OOB) MFA authenticator. |
|  [authenticateWithRecoveryCode(code)](./node-client.mfacontainer.authenticatewithrecoverycode.md) |  | Perform MFA using recovery code. |
|  [authenticateWithTOTP(options)](./node-client.mfacontainer.authenticatewithtotp.md) |  | Perform MFA using time-based one time password (TOTP) MFA authenticator. |
|  [createNewOOB(options)](./node-client.mfacontainer.createnewoob.md) |  | Creates new out-of-band (OOB) MFA authenticator. |
|  [createNewTOTP(options)](./node-client.mfacontainer.createnewtotp.md) |  | Creates new time-based one time password (TOTP) MFA authenticator. |
|  [deleteAuthenticator(id)](./node-client.mfacontainer.deleteauthenticator.md) |  | Delete the MFA authenticator with specified ID. |
|  [getAuthenticators()](./node-client.mfacontainer.getauthenticators.md) |  | Returns a list of configured MFA authenticators. |
|  [listRecoveryCode()](./node-client.mfacontainer.listrecoverycode.md) |  | Returns a list of MFA recovery code. |
|  [regenerateRecoveryCode()](./node-client.mfacontainer.regeneraterecoverycode.md) |  | Regenerates MFA recovery codes. |
|  [revokeAllTrustedDevices()](./node-client.mfacontainer.revokealltrusteddevices.md) |  | Revokes all MFA trusted devices. |
|  [triggerOOB(authenticatorID)](./node-client.mfacontainer.triggeroob.md) |  | Triggers out-of-band (OOB) MFA. |

